[package]
name = "cypher_derive"
version = "0.1.3"
authors = ["I0HuKc <spaixel.info@gmail.com>"]
keywords = ["neo4j", "cypher"]
description = "A flexible and intuitive query builder for Neo4j and Cypher."
documentation = "https://github.com/I0HuKc/cypher#usage"
license = "BSD-2-Clause"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
proc_macro_roids = "0.7.0"