[package]
name = "neo4j_cypher"
version = "0.1.1"
authors = ["I0HuKc <spaixel.info@gmail.com>"]
keywords = ["neo4j", "cypher"]
description = "A flexible and intuitive query builder for Neo4j and Cypher."
documentation = "https://github.com/I0HuKc/cypher"
license = "BSD-2-Clause"
edition = "2021"

[dependencies]
cypher_derive = { veriosn="0.1.1", optional = true }

[features]
derive = ["cypher_derive"]